# science-capability-registry

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE_MAP.md  README.md  SYSTEM_INTERFACE.md  pyproject.toml
Tools/: python.bat
benchmarks/: README.md
docs/: 00_science_capability_context.md  01_science_asset_management.md  02_four_repo_science_capability_chain.md
prompts/: new_webpage_to_asset_prompt.md  openfoam_capability_workflow_prompt.md
reports/: cantera_C01_ignition_validation.md  cantera_C01_perturbation_validation.md  cantera_C02_flame_speed_validation.md  cantera_C02_perturbation_validation.md  cantera_C03_baseline_validation.md  cantera_C03_perturbation_validation.md  cantera_C04_extinction_validation.md  cantera_C05_perturbation_validation.md  cantera_C05_reaction_path_validation.md  cantera_C06_mechanism_reduction_validation.md  comsol_C01_C06_cross_profile_regression_2026-07-03.md  comsol_C01_C06_matlab_driver_capability_map_2026-07-02.md  comsol_C01_matlab_server_bridge_runtime_livelink_smoke_2026-07-03.md  comsol_C01_matlab_server_bridge_runtime_preflight_skeleton_2026-07-03.md  comsol_C02_model_construction_api_contract_livelink_smoke_2026-07-03.md  comsol_C03_C06_application_library_replay_candidates_2026-07-03.md  comsol_C03_C06_domain_activation_official_replay_smoke_2026-07-03.md  comsol_C03_C06_negative_validation_2026-07-03.md  comsol_C03_geometry_mesh_import_contract_livelink_heat_rectangle_smoke_2026-07-03.md  comsol_C03_geometry_mesh_import_contract_static_skeleton_2026-07-03.md  comsol_C04_physics_boundary_assignment_contract_livelink_heat_rectangle_smoke_2026-07-03.md  comsol_C04_physics_boundary_assignment_contract_static_skeleton_2026-07-03.md  comsol_C05_C06_analytical_heat_benchmark_policy_2026-07-03.md  comsol_C05_study_run_solver_smoke_livelink_heat_rectangle_smoke_2026-07-03.md  comsol_C05_study_run_solver_smoke_static_skeleton_2026-07-03.md  comsol_C06_pseudoperiodicity_official_replay_export_smoke_2026-07-03.md  comsol_C06_result_extraction_postprocess_validation_livelink_heat_rectangle_smoke_2026-07-03.md  comsol_C06_result_extraction_postprocess_validation_static_skeleton_2026-07-03.md  comsol_failure_ledger.yaml  comsol_fluent_four_repo_task_closure_2026-07-03.md  evidence_index.yaml  fluent_C01_C08_official_replay_manifest_2026-07-02.md  fluent_C01_C08_pause_next_gate_summary_2026-07-02.md  fluent_C01_C08_seed_suite_static_readiness_2026-07-02.md  fluent_C01_steady_internal_flow_runtime_local_v251_elbow_smoke_2026-07-02.md  fluent_C02_C03_runtime_package_closure_2026-07-03.md  fluent_C02_C08_runtime_smoke_closure_2026-07-02.md  fluent_C02_verification_reference_validation_mesh_smoke_2026-07-02.md  fluent_C02_verification_reference_validation_static_readiness_2026-07-02.md  fluent_C04_external_aero_force_coefficients_reference_csv_static_2026-07-02.md  (+68 more)
schemas/: cantera_C01_constant_pressure_ignition.schema.json  cantera_C02_freely_propagating_premixed_flame.schema.json  cantera_C03_counterflow_diffusion_flame.schema.json  cantera_C04_extinction_strain_rate.schema.json  cantera_C05_reaction_path_analysis.schema.json  cantera_C06_mechanism_reduction.schema.json  capability_card.schema.json  capability_registry.schema.json  comsol_C01_matlab_server_bridge_runtime.schema.json  comsol_C02_model_construction_api_contract.schema.json  comsol_C03_geometry_mesh_import_contract.schema.json  comsol_C04_physics_boundary_assignment_contract.schema.json  comsol_C05_study_run_solver_smoke.schema.json  comsol_C06_result_extraction_postprocess_validation.schema.json  comsol_application_library_replay.schema.json  comsol_seed_suite.schema.json  fluent_C01_steady_internal_flow_runtime.schema.json  fluent_C02_verification_reference_validation.schema.json  fluent_C03_mesh_convergence_trend.schema.json  fluent_C04_external_aero_force_coefficients.schema.json  fluent_C05_vof_free_surface_transient.schema.json  fluent_C06_sliding_rotating_mesh.schema.json  fluent_C07_heat_transfer_energy_balance.schema.json  fluent_C08_workbench_parameter_integration.schema.json  fluent_failure_ledger.schema.json  fluent_official_replay_manifest.schema.json  fluent_seed_suite.schema.json  gmsh_C01_parametric_geometry_mesh_generation.schema.json  gmsh_C02_boundary_physical_group_contract.schema.json  gmsh_C03_mesh_refinement_quality_trend.schema.json  (+14 more)
(+619 files in other folders)
