[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "science-capability-registry"
version = "0.1.0"
description = "Scientific capability registry assets and runnable benchmark packages."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.18",
  "matplotlib>=3.7",
  "numpy>=1.21",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
solver = [
  "cantera>=3.0",
]
test = [
  "pytest>=8.0",
]

[project.scripts]
science-cantera-c01 = "science_capability_registry.cantera.c01_constant_pressure_ignition.cli:main"
science-cantera-c02 = "science_capability_registry.cantera.c02_freely_propagating_premixed_flame.cli:main"
science-cantera-c03 = "science_capability_registry.cantera.c03_counterflow_diffusion_flame.cli:main"
science-cantera-c04 = "science_capability_registry.cantera.c04_extinction_strain_rate.cli:main"
science-cantera-c05 = "science_capability_registry.cantera.c05_reaction_path_analysis.cli:main"
science-cantera-c06 = "science_capability_registry.cantera.c06_mechanism_reduction.cli:main"
science-openfoam-c01 = "science_capability_registry.openfoam.lid_driven_cavity_incompressible_laminar.cli:main"
science-openfoam-c01-benchmark = "science_capability_registry.openfoam.lid_driven_cavity_incompressible_laminar.benchmark:main"
science-openfoam-c02 = "science_capability_registry.openfoam.potential_flow_cylinder_analytical_validation.cli:main"
science-openfoam-c03 = "science_capability_registry.openfoam.backward_facing_step_rans_internal_flow.cli:main"
science-openfoam-c03-benchmark = "science_capability_registry.openfoam.backward_facing_step_rans_internal_flow.benchmark:main"
science-openfoam-c04 = "science_capability_registry.openfoam.external_aero_motorbike_rans_snappy.cli:main"
science-openfoam-c05 = "science_capability_registry.openfoam.transient_cylinder_vortex_shedding.cli:main"
science-openfoam-c06 = "science_capability_registry.openfoam.dam_break_vof_free_surface.cli:main"
science-openfoam-c06-benchmark = "science_capability_registry.openfoam.dam_break_vof_free_surface.benchmark:main"
science-openfoam-c07 = "science_capability_registry.openfoam.conjugate_heat_transfer_cooling.cli:main"
science-openfoam-c08 = "science_capability_registry.openfoam.compressible_shock_capturing_forward_step.cli:main"
science-fluent-c01 = "science_capability_registry.fluent.steady_internal_flow_runtime.cli:main"
science-fluent-c02 = "science_capability_registry.fluent.verification_reference_validation.cli:main"
science-fluent-c03 = "science_capability_registry.fluent.mesh_convergence_trend.cli:main"
science-fluent-c04 = "science_capability_registry.fluent.external_aero_force_coefficients.cli:main"
science-fluent-c05 = "science_capability_registry.fluent.vof_free_surface_transient.cli:main"
science-fluent-c06 = "science_capability_registry.fluent.sliding_rotating_mesh.cli:main"
science-fluent-c07 = "science_capability_registry.fluent.heat_transfer_energy_balance.cli:main"
science-fluent-c08 = "science_capability_registry.fluent.workbench_parameter_integration.cli:main"
science-fluent-replay-manifest = "science_capability_registry.fluent.official_replay_manifest.cli:main"
science-gmsh-c01 = "science_capability_registry.gmsh.parametric_geometry_mesh_generation.cli:main"
science-capability = "science_capability_registry.registry.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
